fix formatting dev

--- a/src/lib/i18n/locales/uk-UA/translation.json
+++ b/src/lib/i18n/locales/uk-UA/translation.json
@@ -12,9 +12,8 @@
 	"a user": "користувача",
 	"About": "Про програму",
 	"Account": "Обліковий запис",
-	"Account Activation Pending": "Очікування активації облікового запису",
 	"Accurate information": "Точна інформація",
-	"Active Users": "Активні користувачі",
+	"Active Users": "",
 	"Add": "Додати",
 	"Add a model id": "Додайте id моделі",
 	"Add a short description about what this model does": "Додайте короткий опис того, що робить ця модель",
@@ -23,7 +22,6 @@
 	"Add custom prompt": "Додати користувацьку підказку",
 	"Add Docs": "Додати документи",
 	"Add Files": "Додати файли",
-	"Add memory": "Додати пам'ять",
 	"Add Memory": "Додати пам'ять",
 	"Add message": "Додати повідомлення",
 	"Add Model": "Додати модель",
@@ -31,7 +29,6 @@
 	"Add User": "Додати користувача",
 	"Adjusting these settings will apply changes universally to all users.": "Зміни в цих налаштуваннях будуть застосовані для всіх користувачів.",
 	"admin": "адмін",
-	"Admin": "Адмін",
 	"Admin Panel": "Адмін-панель",
 	"Admin Settings": "Налаштування адміністратора",
 	"Advanced Parameters": "Розширені параметри",
@@ -41,7 +38,7 @@
 	"All Users": "Всі користувачі",
 	"Allow": "Дозволити",
 	"Allow Chat Deletion": "Дозволити видалення чату",
-	"Allow non-local voices": "Дозволити не локальні голоси",
+	"Allow non-local voices": "",
 	"alphanumeric characters and hyphens": "алфавітно-цифрові символи та дефіси",
 	"Already have an account?": "Вже є обліковий запис?",
 	"an assistant": "асистента",
@@ -62,7 +59,7 @@
 	"Audio": "Аудіо",
 	"August": "Серпень",
 	"Auto-playback response": "Автоматичне відтворення відповіді",
-	"Auto-send input after 3 sec.": "Автоматична відправка через 3 сек",
+	"Auto-send input after 3 sec.": "Автоматична відправка через 3 сек.",
 	"AUTOMATIC1111 Base URL": "URL-адреса AUTOMATIC1111",
 	"AUTOMATIC1111 Base URL is required.": "Необхідна URL-адреса AUTOMATIC1111.",
 	"available!": "доступно!",
@@ -88,16 +85,13 @@
 	"Checking for updates...": "Перевірка оновлень...",
 	"Choose a model before saving...": "Оберіть модель перед збереженням...",
 	"Chunk Overlap": "Перекриття фрагментів",
-	"Chunk Params": "Параметри розбиття",
+	"Chunk Params": "Параметри фрагментів",
 	"Chunk Size": "Розмір фрагменту",
 	"Citation": "Цитування",
-	"Clear memory": "Очистити пам'ять",
 	"Click here for help.": "Клацніть тут, щоб отримати допомогу.",
 	"Click here to": "Натисніть тут, щоб",
-	"Click here to download user import template file.": "Натисніть тут, щоб завантажити файл шаблону імпорту користувача.",
 	"Click here to select": "Натисніть тут, щоб вибрати",
 	"Click here to select a csv file.": "Натисніть тут, щоб вибрати csv-файл.",
-	"Click here to select a py file.": "Натисніть тут, щоб вибрати py-файл.",
 	"Click here to select documents.": "Натисніть тут, щоб вибрати документи.",
 	"click here.": "клацніть тут.",
 	"Click on the user role button to change a user's role.": "Натисніть кнопку ролі користувача, щоб змінити роль користувача.",
@@ -111,7 +105,6 @@
 	"Concurrent Requests": "Одночасні запити",
 	"Confirm Password": "Підтвердіть пароль",
 	"Connections": "З'єднання",
-	"Contact Admin for WebUI Access": "Зверніться до адміністратора для отримання доступу до WebUI",
 	"Content": "Зміст",
 	"Context Length": "Довжина контексту",
 	"Continue Response": "Продовжити відповідь",
@@ -129,8 +122,6 @@
 	"Create new secret key": "Створити новий секретний ключ",
 	"Created at": "Створено у",
 	"Created At": "Створено у",
-	"Created by": "Створено",
-	"CSV Import": "Імпорт CSV",
 	"Current Model": "Поточна модель",
 	"Current Password": "Поточний пароль",
 	"Custom": "Налаштувати",
@@ -162,11 +153,10 @@
 	"Discover a prompt": "Знайти промт",
 	"Discover, download, and explore custom prompts": "Знайдіть, завантажте та досліджуйте налаштовані промти",
 	"Discover, download, and explore model presets": "Знайдіть, завантажте та досліджуйте налаштовані налаштування моделі",
-	"Dismissible": "Неприйнятно",
 	"Display the username instead of You in the Chat": "Показувати ім'я користувача замість 'Ви' в чаті",
 	"Document": "Документ",
 	"Document Settings": "Налаштування документа",
-	"Documentation": "Документація",
+	"Documentation": "",
 	"Documents": "Документи",
 	"does not make any external connections, and your data stays securely on your locally hosted server.": "не встановлює жодних зовнішніх з'єднань, і ваші дані залишаються в безпеці на вашому локальному сервері.",
 	"Don't Allow": "Не дозволяти",
@@ -181,7 +171,7 @@
 	"Edit Doc": "Редагувати документ",
 	"Edit User": "Редагувати користувача",
 	"Email": "Електронна пошта",
-	"Embedding Batch Size": "Розмір пакету під час вбудовування",
+	"Embedding Batch Size": "",
 	"Embedding Model": "Модель вбудовування",
 	"Embedding Model Engine": "Двигун модели встраивания ",
 	"Embedding model set to \"{{embedding_model}}\"": "Встановлена модель вбудовування \"{{embedding_model}}\"",
@@ -217,18 +207,15 @@
 	"Error": "Помилка",
 	"Experimental": "Експериментальне",
 	"Export": "Експорт",
-	"Export All Archived Chats": "Експортувати всі архівні чати",
 	"Export All Chats (All Users)": "Експортувати всі чати (всі користувачі)",
-	"Export chat (.json)": "Експорт чату (.json)",
+	"Export chat (.json)": "",
 	"Export Chats": "Експортувати чати",
 	"Export Documents Mapping": "Експортувати відображення документів",
-	"Export LiteLLM config.yaml": "Експорт LiteLLM config.yaml",
 	"Export Models": "Експорт моделей",
 	"Export Prompts": "Експортувати промти",
-	"External Models": "Зовнішні моделі",
 	"Failed to create API Key.": "Не вдалося створити API ключ.",
 	"Failed to read clipboard contents": "Не вдалося прочитати вміст буфера обміну",
-	"Failed to update settings": "Не вдалося оновити налаштування",
+	"Failed to update settings": "",
 	"February": "Лютий",
 	"Feel free to add specific details": "Не соромтеся додавати конкретні деталі",
 	"File Mode": "Файловий режим",
@@ -237,7 +224,6 @@
 	"Fluidly stream large external response chunks": "Плавно передавати великі фрагменти зовнішніх відповідей",
 	"Focus chat input": "Фокус вводу чату",
 	"Followed instructions perfectly": "Бездоганно дотримувався інструкцій",
-	"Form": "Форма",
 	"Format your variables using square brackets like this:": "Форматуйте свої змінні квадратними дужками так:",
 	"Frequency Penalty": "Штраф за частоту",
 	"General": "Загальні",
@@ -283,11 +269,9 @@
 	"Light": "Світла",
 	"Listening...": "Слухаю...",
 	"LLMs can make mistakes. Verify important information.": "LLMs можуть помилятися. Перевірте важливу інформацію.",
-	"Local Models": "Локальні моделі",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Зроблено спільнотою OpenWebUI",
 	"Make sure to enclose them with": "Переконайтеся, що вони закриті",
-	"Manage": "Керувати",
 	"Manage Models": "Керування моделями",
 	"Manage Ollama Models": "Керування моделями Ollama",
 	"Manage Pipelines": "Управління Pipelines",
@@ -297,9 +281,6 @@
 	"May": "Травень",
 	"Memories accessible by LLMs will be shown here.": "Пам'ять, яка доступна LLM, буде показана тут.",
 	"Memory": "Пам'ять",
-	"Memory added successfully": "Пам'ять додано успішно",
-	"Memory cleared successfully": "Пам'ять успішно очищено",
-	"Memory deleted successfully": "Пам'ять успішно видалено",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Повідомлення, які ви надішлете після створення посилання, не будуть доступні для інших. Користувачі, які мають URL, зможуть переглядати спільний чат.",
 	"Minimum Score": "Мінімальний бал",
 	"Mirostat": "Mirostat",
@@ -334,7 +315,7 @@
 	"Note: If you set a minimum score, the search will only return documents with a score greater than or equal to the minimum score.": "Примітка: Якщо ви встановите мінімальну кількість балів, пошук поверне лише документи з кількістю балів, більшою або рівною мінімальній кількості балів.",
 	"Notifications": "Сповіщення",
 	"November": "Листопад",
-	"num_thread (Ollama)": "num_thread (Ollama)",
+	"num_thread (Ollama)": "num_thread (Оллама)",
 	"October": "Жовтень",
 	"Off": "Вимк",
 	"Okay, Let's Go!": "Гаразд, давайте почнемо!",
@@ -342,7 +323,6 @@
 	"Ollama": "Ollama",
 	"Ollama API": "Ollama API",
 	"Ollama API disabled": "Ollama API вимкнено",
-	"Ollama API is disabled": "API Ollama вимкнено",
 	"Ollama Version": "Версія Ollama",
 	"On": "Увімк",
 	"Only": "Тільки",
@@ -387,7 +367,6 @@
 	"Read Aloud": "Читати вголос",
 	"Record voice": "Записати голос",
 	"Redirecting you to OpenWebUI Community": "Перенаправляємо вас до спільноти OpenWebUI",
-	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "Називайте себе \"Користувач\" (наприклад, \"Користувач вивчає іспанську мову\")",
 	"Refused when it shouldn't have": "Відмовив, коли не мав би",
 	"Regenerate": "Регенерувати",
 	"Release Notes": "Нотатки до випуску",
@@ -399,14 +378,13 @@
 	"Reranking Model": "Модель переранжування",
 	"Reranking model disabled": "Модель переранжування вимкнена",
 	"Reranking model set to \"{{reranking_model}}\"": "Модель переранжування встановлено на \"{{reranking_model}}\"",
-	"Reset Upload Directory": "Скинути каталог завантажень",
+	"Reset Upload Directory": "",
 	"Reset Vector Storage": "Скинути векторне сховище",
 	"Response AutoCopy to Clipboard": "Автокопіювання відповіді в буфер обміну",
 	"Role": "Роль",
 	"Rosé Pine": "Rosé Pine",
 	"Rosé Pine Dawn": "Rosé Pine Dawn",
 	"RTL": "RTL",
-	"Running": "Виконується",
 	"Save": "Зберегти",
 	"Save & Create": "Зберегти та створити",
 	"Save & Update": "Зберегти та оновити",
@@ -431,7 +409,6 @@
 	"See what's new": "Подивіться, що нового",
 	"Seed": "Сід",
 	"Select a base model": "Вибрати базову модель",
-	"Select a engine": "Виберіть пошуковик",
 	"Select a mode": "Оберіть режим",
 	"Select a model": "Виберіть модель",
 	"Select a pipeline": "Виберіть pipeline",
@@ -457,13 +434,13 @@
 	"Set Voice": "Встановити голос",
 	"Settings": "Налаштування",
 	"Settings saved successfully!": "Налаштування успішно збережено!",
-	"Settings updated successfully": "Налаштування успішно оновлені",
+	"Settings updated successfully": "",
 	"Share": "Поділитися",
 	"Share Chat": "Поділитися чатом",
 	"Share to OpenWebUI Community": "Поділитися зі спільнотою OpenWebUI",
 	"short-summary": "короткий зміст",
 	"Show": "Показати",
-	"Show Admin Details in Account Pending Overlay": "Відобразити дані адміністратора у вікні очікування облікового запису",
+	"Show Admin Details in Account Pending Overlay": "",
 	"Show shortcuts": "Показати клавіатурні скорочення",
 	"Showcased creativity": "Продемонстрований креатив",
 	"sidebar": "бокова панель",
@@ -506,7 +483,6 @@
 	"to": "в",
 	"To access the available model names for downloading,": "Щоб отримати доступ до назв доступних для завантаження моделей,",
 	"To access the GGUF models available for downloading,": "Щоб отримати доступ до моделей GGUF, які можна завантажити,,",
-	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "Щоб отримати доступ до веб-інтерфейсу, зверніться до адміністратора. Адміністратори можуть керувати статусами користувачів з Панелі адміністратора.",
 	"to chat input.": "в чаті.",
 	"Today": "Сьогодні",
 	"Toggle settings": "Переключити налаштування",
@@ -522,15 +498,14 @@
 	"Update and Copy Link": "Оновлення та копіювання посилання",
 	"Update password": "Оновити пароль",
 	"Upload a GGUF model": "Завантажити GGUF модель",
-	"Upload Files": "Додати файли",
-	"Upload Pipeline": "Завантаження Pipeline",
+	"Upload Files": "Завантажити файли",
 	"Upload Progress": "Прогрес завантаження",
 	"URL Mode": "Режим URL-адреси",
 	"Use '#' in the prompt input to load and select your documents.": "Для введення промтів до веб-сторінок (URL) або вибору документів, будь ласка, використовуйте символ '#'.",
 	"Use Gravatar": "Змінити аватар",
 	"Use Initials": "Використовувати ініціали",
-	"use_mlock (Ollama)": "use_mlock (Ollama)",
-	"use_mmap (Ollama)": "use_mmap (Ollama)",
+	"use_mlock (Ollama)": "use_mlock (Оллама)",
+	"use_mmap (Ollama)": "use_mmap (Оллама)",
 	"user": "користувач",
 	"User Permissions": "Права користувача",
 	"Users": "Користувачі",
@@ -543,7 +518,7 @@
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "Попередження: Якщо ви оновлюєте або змінюєте модель вбудовування, вам потрібно буде повторно імпортувати всі документи.",
 	"Web": "Веб",
 	"Web Loader Settings": "Налаштування веб-завантажувача",
-	"Web Params": "Веб-параметри",
+	"Web Params": "Налаштування веб-завантажувача",
 	"Web Search": "Веб-пошук",
 	"Web Search Engine": "Веб-пошукова система",
 	"Webhook URL": "URL веб-запиту",
@@ -553,19 +528,17 @@
 	"What’s New in": "Що нового в",
 	"When history is turned off, new chats on this browser won't appear in your history on any of your devices.": "Коли історія вимкнена, нові чати в цьому браузері не будуть відображатися в історії на жодному з ваших пристроїв.",
 	"Whisper (Local)": "Whisper (локально)",
-	"Widescreen Mode": "Широкоекранний режим",
+	"Widescreen Mode": "",
 	"Workspace": "Робочий простір",
 	"Write a prompt suggestion (e.g. Who are you?)": "Напишіть промт (напр., Хто ти?)",
 	"Write a summary in 50 words that summarizes [topic or keyword].": "Напишіть стислий зміст у 50 слів, який узагальнює [тема або ключове слово].",
 	"Yesterday": "Вчора",
 	"You": "Ви",
-	"You can personalize your interactions with LLMs by adding memories through the 'Manage' button below, making them more helpful and tailored to you.": "Ви можете налаштувати ваші взаємодії з мовними моделями, додавши спогади через кнопку 'Керувати' внизу, що зробить їх більш корисними та персоналізованими для вас.",
 	"You cannot clone a base model": "Базову модель не можна клонувати",
 	"You have no archived conversations.": "У вас немає архівованих розмов.",
 	"You have shared this chat": "Ви поділилися цим чатом",
 	"You're a helpful assistant.": "Ви корисний асистент.",
 	"You're now logged in.": "Ви увійшли в систему.",
-	"Your account status is currently pending activation.": "Статус вашого облікового запису наразі очікує на активацію.",
 	"Youtube": "Youtube",
 	"Youtube Loader Settings": "Налаштування завантажувача Youtube"
 }
