--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -12,7 +12,6 @@
 	"a user": "用户",
 	"About": "关于",
 	"Account": "账号",
-	"Account Activation Pending": "账号待激活",
 	"Accurate information": "提供的信息很准确",
 	"Active Users": "当前在线用户",
 	"Add": "添加",
@@ -23,7 +22,6 @@
 	"Add custom prompt": "添加自定义提示词",
 	"Add Docs": "添加文档",
 	"Add Files": "添加文件",
-	"Add memory": "",
 	"Add Memory": "添加记忆",
 	"Add message": "添加消息",
 	"Add Model": "添加模型",
@@ -31,7 +29,6 @@
 	"Add User": "添加用户",
 	"Adjusting these settings will apply changes universally to all users.": "调整这些设置将会对所有用户应用更改。",
 	"admin": "管理员",
-	"Admin": "管理员联系方式",
 	"Admin Panel": "管理员面板",
 	"Admin Settings": "管理员设置",
 	"Advanced Parameters": "高级参数",
@@ -94,10 +91,8 @@
 	"Clear memory": "清除记忆",
 	"Click here for help.": "点击这里获取帮助。",
 	"Click here to": "单击",
-	"Click here to download user import template file.": "",
 	"Click here to select": "点击这里选择",
 	"Click here to select a csv file.": "单击此处选择 csv 文件。",
-	"Click here to select a py file.": "",
 	"Click here to select documents.": "单击选择文档",
 	"click here.": "点击这里。",
 	"Click on the user role button to change a user's role.": "点击角色前方的组别按钮以更改用户所属权限组。",
@@ -111,7 +106,6 @@
 	"Concurrent Requests": "并发请求",
 	"Confirm Password": "确认密码",
 	"Connections": "外部连接",
-	"Contact Admin for WebUI Access": "请联系管理员以获取访问权限",
 	"Content": "内容",
 	"Context Length": "上下文长度",
 	"Continue Response": "继续生成",
@@ -130,7 +124,6 @@
 	"Created at": "创建于",
 	"Created At": "创建于",
 	"Created by": "作者",
-	"CSV Import": "",
 	"Current Model": "当前模型",
 	"Current Password": "当前密码",
 	"Custom": "自定义",
@@ -217,15 +210,12 @@
 	"Error": "错误",
 	"Experimental": "实验性",
 	"Export": "导出",
-	"Export All Archived Chats": "",
 	"Export All Chats (All Users)": "导出所有用户对话",
 	"Export chat (.json)": "JSON 文件 (.json)",
 	"Export Chats": "导出对话",
 	"Export Documents Mapping": "导出文档映射",
-	"Export LiteLLM config.yaml": "",
 	"Export Models": "导出模型",
 	"Export Prompts": "导出提示词",
-	"External Models": "外部模型",
 	"Failed to create API Key.": "无法创建 API 密钥。",
 	"Failed to read clipboard contents": "无法读取剪贴板内容",
 	"Failed to update settings": "无法更新设置",
@@ -237,7 +227,6 @@
 	"Fluidly stream large external response chunks": "流畅地传输外部大型响应块数据",
 	"Focus chat input": "聚焦对话输入",
 	"Followed instructions perfectly": "完全按照指示执行",
-	"Form": "",
 	"Format your variables using square brackets like this:": "使用这样的方括号格式化你的变量：",
 	"Frequency Penalty": "频率惩罚",
 	"General": "通用",
@@ -283,7 +272,6 @@
 	"Light": "浅色",
 	"Listening...": "正在倾听...",
 	"LLMs can make mistakes. Verify important information.": "大语言模型可能会生成误导性错误信息，请对关键信息加以验证。",
-	"Local Models": "本地模型",
 	"LTR": "从左至右",
 	"Made by OpenWebUI Community": "由 OpenWebUI 社区制作",
 	"Make sure to enclose them with": "确保将它们包含在内",
@@ -297,9 +285,6 @@
 	"May": "五月",
 	"Memories accessible by LLMs will be shown here.": "大语言模型可访问的记忆将在此显示。",
 	"Memory": "记忆",
-	"Memory added successfully": "",
-	"Memory cleared successfully": "",
-	"Memory deleted successfully": "",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "创建链接后发送的消息不会被共享。具有 URL 的用户将能够查看共享对话。",
 	"Minimum Score": "最低分",
 	"Mirostat": "Mirostat",
@@ -342,7 +327,6 @@
 	"Ollama": "Ollama",
 	"Ollama API": "Ollama API",
 	"Ollama API disabled": "Ollama API 已禁用",
-	"Ollama API is disabled": "Ollama API 已禁用",
 	"Ollama Version": "Ollama 版本",
 	"On": "开启",
 	"Only": "仅",
@@ -387,7 +371,6 @@
 	"Read Aloud": "朗读",
 	"Record voice": "录音",
 	"Redirecting you to OpenWebUI Community": "正在将您重定向到 OpenWebUI 社区",
-	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "使用\"User\" (用户) 来指代自己（例如：“User 正在学习西班牙语”）",
 	"Refused when it shouldn't have": "无理拒绝",
 	"Regenerate": "重新生成",
 	"Release Notes": "更新日志",
@@ -503,7 +486,6 @@
 	"to": "到",
 	"To access the available model names for downloading,": "要访问可下载的模型名称，",
 	"To access the GGUF models available for downloading,": "要访问可下载的 GGUF 模型，",
-	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "请联系管理员以访问。管理员可以在后台管理面板中管理用户状态。",
 	"to chat input.": "到对话输入。",
 	"Today": "今天",
 	"Toggle settings": "切换设置",
@@ -520,7 +502,6 @@
 	"Update password": "更新密码",
 	"Upload a GGUF model": "上传一个 GGUF 模型",
 	"Upload Files": "上传文件",
-	"Upload Pipeline": "",
 	"Upload Progress": "上传进度",
 	"URL Mode": "URL 模式",
 	"Use '#' in the prompt input to load and select your documents.": "在输入框中输入'#'号来选择并附带你的文档。",
@@ -562,7 +543,16 @@
 	"You have shared this chat": "你之前已经分享过此",
 	"You're a helpful assistant.": "你是一个有帮助的助手。",
 	"You're now logged in.": "已登录。",
-	"Your account status is currently pending activation.": "您的账号当前状态为待激活。",
 	"Youtube": "YouTube",
-	"Youtube Loader Settings": "YouTube 爬取设置"
+	"Youtube Loader Settings": "YouTube 爬取设置",
+	"Ollama API is disabled": "Ollama API 已禁用",
+	"This is an experimental feature, it may not function as expected and is subject to change at any time.": "这是一个实验性功能，可能无法按预期运行，并随时可能更改。",
+	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "使用\"User\" (用户) 来指代自己（例如：“User 正在学习西班牙语”）",
+	"Local Models": "本地模型",
+	"External Models": "外部模型",
+	"Account Activation Pending": "账号待激活",
+	"Contact Admin for WebUI Access": "请联系管理员以获取访问权限",
+	"Your account status is currently pending activation.": "您的账号当前状态为待激活。",
+	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "请联系管理员以访问。管理员可以在后台管理面板中管理用户状态。",
+	"Admin": "管理员联系方式"
 }
