--- a/src/lib/i18n/locales/bn-BD/translation.json
+++ b/src/lib/i18n/locales/bn-BD/translation.json
@@ -13,7 +13,7 @@
 	"About": "সম্পর্কে",
 	"Account": "একাউন্ট",
 	"Accurate information": "সঠিক তথ্য",
-	"Active Users": "",
+	"Active Users": "সক্রিয় ব্যবহারকারী",
 	"Add": "যোগ করুন",
 	"Add a model id": "একটি মডেল ID যোগ করুন",
 	"Add a short description about what this model does": "এই মডেলটি কী করে সে সম্পর্কে একটি সংক্ষিপ্ত বিবরণ যুক্ত করুন",
@@ -38,7 +38,7 @@
 	"All Users": "সব ইউজার",
 	"Allow": "অনুমোদন",
 	"Allow Chat Deletion": "চ্যাট ডিলিট করতে দিন",
-	"Allow non-local voices": "",
+	"Allow non-local voices": "অ-স্থানীয় ভয়েসের অনুমতি দিন",
 	"alphanumeric characters and hyphens": "ইংরেজি অক্ষর, সংখ্যা এবং হাইফেন",
 	"Already have an account?": "আগে থেকেই একাউন্ট আছে?",
 	"an assistant": "একটা এসিস্ট্যান্ট",
@@ -51,25 +51,25 @@
 	"April": "আপ্রিল",
 	"Archive": "আর্কাইভ",
 	"Archive All Chats": "আর্কাইভ করুন সকল চ্যাট",
-	"Archived Chats": "চ্যাট ইতিহাস সংরক্ষণাগার",
+	"Archived Chats": "চ্যাট আর্কাইভ",
 	"are allowed - Activate this command by typing": "অনুমোদিত - কমান্ডটি চালু করার জন্য লিখুন",
 	"Are you sure?": "আপনি নিশ্চিত?",
 	"Attach file": "ফাইল যুক্ত করুন",
-	"Attention to detail": "বিস্তারিত বিশেষতা",
+	"Attention to detail": "বিস্তারিত এরদিকে মনোযোগ",
 	"Audio": "অডিও",
 	"August": "আগস্ট",
 	"Auto-playback response": "রেসপন্স অটো-প্লেব্যাক",
 	"Auto-send input after 3 sec.": "৩ সেকেন্ড পর ইনপুট সংয়ক্রিয়ভাবে পাঠান",
 	"AUTOMATIC1111 Base URL": "AUTOMATIC1111 বেজ ইউআরএল",
 	"AUTOMATIC1111 Base URL is required.": "AUTOMATIC1111 বেজ ইউআরএল আবশ্যক",
-	"available!": "উপলব্ধ!",
+	"available!": "গ্রহণসাধ্য!",
 	"Back": "পেছনে",
 	"Bad Response": "খারাপ প্রতিক্রিয়া",
 	"Banners": "ব্যানার",
 	"Base Model (From)": "বেস মডেল (থেকে)",
 	"before": "পূর্ববর্তী",
 	"Being lazy": "অলস হওয়া",
-	"Brave Search API Key": "সাহসী অনুসন্ধান API কী",
+	"Brave Search API Key": "ব্রাভে অনুসন্ধান API কী",
 	"Bypass SSL verification for Websites": "ওয়েবসাইটের জন্য SSL যাচাই বাতিল করুন",
 	"Cancel": "বাতিল",
 	"Capabilities": "সক্ষমতা",
@@ -149,14 +149,14 @@
 	"Deleted {{name}}": "{{name}} মোছা হয়েছে",
 	"Description": "বিবরণ",
 	"Didn't fully follow instructions": "ইনস্ট্রাকশন সম্পূর্ণ অনুসরণ করা হয়নি",
-	"Discover a model": "একটি মডেল আবিষ্কার করুন",
+	"Discover a model": "একটি মডেল খুঁজে বের করুন",
 	"Discover a prompt": "একটি প্রম্পট খুঁজে বের করুন",
 	"Discover, download, and explore custom prompts": "কাস্টম প্রম্পটগুলো আবিস্কার, ডাউনলোড এবং এক্সপ্লোর করুন",
 	"Discover, download, and explore model presets": "মডেল প্রিসেটগুলো আবিস্কার, ডাউনলোড এবং এক্সপ্লোর করুন",
 	"Display the username instead of You in the Chat": "চ্যাটে 'আপনি'-র পরবর্তে ইউজারনেম দেখান",
 	"Document": "ডকুমেন্ট",
 	"Document Settings": "ডকুমেন্ট সেটিংসমূহ",
-	"Documentation": "",
+	"Documentation": "ডকুমেন্টেশন",
 	"Documents": "ডকুমেন্টসমূহ",
 	"does not make any external connections, and your data stays securely on your locally hosted server.": "কোন এক্সটার্নাল কানেকশন তৈরি করে না, এবং আপনার ডেটা আর লোকালি হোস্টেড সার্ভারেই নিরাপদে থাকে।",
 	"Don't Allow": "অনুমোদন দেবেন না",
@@ -171,21 +171,21 @@
 	"Edit Doc": "ডকুমেন্ট এডিট করুন",
 	"Edit User": "ইউজার এডিট করুন",
 	"Email": "ইমেইল",
-	"Embedding Batch Size": "",
+	"Embedding Batch Size": "এম্বেডিং ব্যাচের আকার",
 	"Embedding Model": "ইমেজ ইমেবডিং মডেল",
 	"Embedding Model Engine": "ইমেজ ইমেবডিং মডেল ইঞ্জিন",
 	"Embedding model set to \"{{embedding_model}}\"": "ইমেজ ইমেবডিং মডেল সেট করা হয়েছে - \"{{embedding_model}}\"",
 	"Enable Chat History": "চ্যাট হিস্টোরি চালু করুন",
-	"Enable Community Sharing": "সম্প্রদায় শেয়ারকরণ সক্ষম করুন",
+	"Enable Community Sharing": "কমিউনিটি শেয়ারিং সক্ষম করুন",
 	"Enable New Sign Ups": "নতুন সাইনআপ চালু করুন",
 	"Enable Web Search": "ওয়েব অনুসন্ধান সক্ষম করুন",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "আপনার সিএসভি ফাইলটিতে এই ক্রমে 4 টি কলাম অন্তর্ভুক্ত রয়েছে তা নিশ্চিত করুন: নাম, ইমেল, পাসওয়ার্ড, ভূমিকা।.",
 	"Enter {{role}} message here": "{{role}} মেসেজ এখানে লিখুন",
 	"Enter a detail about yourself for your LLMs to recall": "আপনার এলএলএমগুলি স্মরণ করার জন্য নিজের সম্পর্কে একটি বিশদ লিখুন",
-	"Enter Brave Search API Key": "সাহসী অনুসন্ধান API কী লিখুন",
+	"Enter Brave Search API Key": "ব্রাভে অনুসন্ধান API কী লিখুন",
 	"Enter Chunk Overlap": "চাঙ্ক ওভারল্যাপ লিখুন",
 	"Enter Chunk Size": "চাংক সাইজ লিখুন",
-	"Enter Github Raw URL": "গিটহাব কাঁচা URL লিখুন",
+	"Enter Github Raw URL": "গিটহাব Raw URL লিখুন",
 	"Enter Google PSE API Key": "গুগল পিএসই এপিআই কী লিখুন",
 	"Enter Google PSE Engine Id": "গুগল পিএসই ইঞ্জিন আইডি লিখুন",
 	"Enter Image Size (e.g. 512x512)": "ছবির মাপ লিখুন (যেমন 512x512)",
@@ -206,18 +206,18 @@
 	"Enter Your Role": "আপনার রোল লিখুন",
 	"Error": "ত্রুটি",
 	"Experimental": "পরিক্ষামূলক",
-	"Export": "রপ্তানি",
+	"Export": "এক্সপোর্ট",
 	"Export All Chats (All Users)": "সব চ্যাট এক্সপোর্ট করুন (সব ইউজারের)",
-	"Export chat (.json)": "",
+	"Export chat (.json)": "এক্সপোর্ট চ্যাট (.json)",
 	"Export Chats": "চ্যাটগুলো এক্সপোর্ট করুন",
 	"Export Documents Mapping": "ডকুমেন্টসমূহ ম্যাপিং এক্সপোর্ট করুন",
-	"Export Models": "রপ্তানি মডেল",
+	"Export Models": "এক্সপোর্ট মডেল",
 	"Export Prompts": "প্রম্পটগুলো একপোর্ট করুন",
 	"Failed to create API Key.": "API Key তৈরি করা যায়নি।",
 	"Failed to read clipboard contents": "ক্লিপবোর্ডের বিষয়বস্তু পড়া সম্ভব হয়নি",
-	"Failed to update settings": "",
+	"Failed to update settings": "সেটিংস আপডেট করতে ব্যর্থ হয়েছে৷",
 	"February": "ফেব্রুয়ারি",
-	"Feel free to add specific details": "নির্দিষ্ট বিবরণ যোগ করতে বিনা দ্বিধায়",
+	"Feel free to add specific details": "নির্দিষ্ট বিবরণ যোগ করুন বিনা দ্বিধায়",
 	"File Mode": "ফাইল মোড",
 	"File not found.": "ফাইল পাওয়া যায়নি",
 	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "ফিঙ্গারপ্রিন্ট স্পুফিং ধরা পড়েছে: অ্যাভাটার হিসেবে নামের আদ্যক্ষর ব্যবহার করা যাচ্ছে না। ডিফল্ট প্রোফাইল পিকচারে ফিরিয়ে নেয়া হচ্ছে।",
@@ -234,7 +234,7 @@
 	"Google PSE API Key": "গুগল পিএসই এপিআই কী",
 	"Google PSE Engine Id": "গুগল পিএসই ইঞ্জিন আইডি",
 	"h:mm a": "h:mm a",
-	"has no conversations.": "কোন কনভার্সেশন আছে না।",
+	"has no conversations.": "কোন কথোপকথন নেই।",
 	"Hello, {{name}}": "হ্যালো, {{name}}",
 	"Help": "সহায়তা",
 	"Hide": "লুকান",
@@ -346,12 +346,12 @@
 	"PDF Extract Images (OCR)": "পিডিএফ এর ছবি থেকে লেখা বের করুন (OCR)",
 	"pending": "অপেক্ষমান",
 	"Permission denied when accessing microphone: {{error}}": "মাইক্রোফোন ব্যবহারের অনুমতি পাওয়া যায়নি: {{error}}",
-	"Personalization": "ডিজিটাল বাংলা",
+	"Personalization": "ব্যক্তিগতকরণ",
 	"Pipelines": "পাইপলাইন",
 	"Pipelines Valves": "পাইপলাইন ভালভ",
 	"Plain text (.txt)": "প্লায়েন টেক্সট (.txt)",
 	"Playground": "খেলাঘর",
-	"Positive attitude": "পজিটিভ আক্রমণ",
+	"Positive attitude": "ইতিবাচক মনোভাব",
 	"Previous 30 days": "পূর্ব ৩০ দিন",
 	"Previous 7 days": "পূর্ব ৭ দিন",
 	"Profile Image": "প্রোফাইল ইমেজ",
@@ -364,21 +364,21 @@
 	"Pull a model from Ollama.com": "Ollama.com থেকে একটি টেনে আনুন আনুন",
 	"Query Params": "Query প্যারামিটারসমূহ",
 	"RAG Template": "RAG টেম্পলেট",
-	"Read Aloud": "পড়াশোনা করুন",
+	"Read Aloud": "জোরে পড়ুন",
 	"Record voice": "ভয়েস রেকর্ড করুন",
 	"Redirecting you to OpenWebUI Community": "আপনাকে OpenWebUI কমিউনিটিতে পাঠানো হচ্ছে",
-	"Refused when it shouldn't have": "যদি উপযুক্ত নয়, তবে রেজিগেনেট করা হচ্ছে",
-	"Regenerate": "রেজিগেনেট করুন",
+	"Refused when it shouldn't have": "প্রত্যাখ্যান যখন এটা উচিত ছিল না",
+	"Regenerate": "আবার তৈরি করুন করুন",
 	"Release Notes": "রিলিজ নোটসমূহ",
 	"Remove": "রিমুভ করুন",
 	"Remove Model": "মডেল রিমুভ করুন",
-	"Rename": "রেনেম",
+	"Rename": "নাম পরিবর্তন",
 	"Repeat Last N": "রিপিট Last N",
 	"Request Mode": "রিকোয়েস্ট মোড",
 	"Reranking Model": "রির্যাক্টিং মডেল",
 	"Reranking model disabled": "রির্যাক্টিং মডেল নিষ্ক্রিয় করা",
 	"Reranking model set to \"{{reranking_model}}\"": "রির ্যাঙ্কিং মডেল \"{{reranking_model}}\" -এ সেট করা আছে",
-	"Reset Upload Directory": "",
+	"Reset Upload Directory": "আপলোড ডিরেক্টরি রিসেট করুন",
 	"Reset Vector Storage": "ভেক্টর স্টোরেজ রিসেট করুন",
 	"Response AutoCopy to Clipboard": "রেসপন্সগুলো স্বয়ংক্রিভাবে ক্লিপবোর্ডে কপি হবে",
 	"Role": "পদবি",
@@ -388,7 +388,7 @@
 	"Save": "সংরক্ষণ",
 	"Save & Create": "সংরক্ষণ এবং তৈরি করুন",
 	"Save & Update": "সংরক্ষণ এবং আপডেট করুন",
-	"Saving chat logs directly to your browser's storage is no longer supported. Please take a moment to download and delete your chat logs by clicking the button below. Don't worry, you can easily re-import your chat logs to the backend through": "মাধ্যমে",
+	"Saving chat logs directly to your browser's storage is no longer supported. Please take a moment to download and delete your chat logs by clicking the button below. Don't worry, you can easily re-import your chat logs to the backend through": "সরাসরি আপনার ব্রাউজারের স্টোরেজে চ্যাট লগ সংরক্ষণ করা আর সমর্থিত নয়। নিচের বোতামে ক্লিক করে আপনার চ্যাট লগগুলি ডাউনলোড এবং মুছে ফেলতে দয়া করে কিছুক্ষণ সময় নিন। চিন্তা করবেন না, আপনি সহজেই ব্যাকএন্ডে আপনার চ্যাট লগগুলি পুনরায় আমদানি করতে পারেন",
 	"Scan": "স্ক্যান",
 	"Scan complete!": "স্ক্যান সম্পন্ন হয়েছে!",
 	"Scan for documents from {{path}}": "ডকুমেন্টসমূহের জন্য {{path}} স্ক্যান করুন",
@@ -432,13 +432,13 @@
 	"Set Voice": "কন্ঠস্বর নির্ধারণ করুন",
 	"Settings": "সেটিংসমূহ",
 	"Settings saved successfully!": "সেটিংগুলো সফলভাবে সংরক্ষিত হয়েছে",
-	"Settings updated successfully": "",
+	"Settings updated successfully": "সেটিংস সফলভাবে আপডেট করা হয়েছে৷",
 	"Share": "শেয়ার করুন",
 	"Share Chat": "চ্যাট শেয়ার করুন",
 	"Share to OpenWebUI Community": "OpenWebUI কমিউনিটিতে শেয়ার করুন",
 	"short-summary": "সংক্ষিপ্ত বিবরণ",
 	"Show": "দেখান",
-	"Show Admin Details in Account Pending Overlay": "",
+	"Show Admin Details in Account Pending Overlay": "অ্যাকাউন্ট পেন্ডিং ওভারলেতে অ্যাডমিনের বিবরণ দেখান",
 	"Show shortcuts": "শর্টকাটগুলো দেখান",
 	"Showcased creativity": "সৃজনশীলতা প্রদর্শন",
 	"sidebar": "সাইডবার",
@@ -466,7 +466,7 @@
 	"Text Completion": "লেখা সম্পন্নকরণ",
 	"Text-to-Speech Engine": "টেক্সট-টু-স্পিচ ইঞ্জিন",
 	"Tfs Z": "Tfs Z",
-	"Thanks for your feedback!": "আপনার মতামত ধন্যবাদ!",
+	"Thanks for your feedback!": "আপনার প্রতিক্রিয়ার জন্য ধন্যবাদ!",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "স্কোর একটি 0.0 (0%) এবং 1.0 (100%) এর মধ্যে একটি মান হওয়া উচিত।",
 	"Theme": "থিম",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "এটা নিশ্চিত করে যে, আপনার গুরুত্বপূর্ণ আলোচনা নিরাপদে আপনার ব্যাকএন্ড ডেটাবেজে সংরক্ষিত আছে। ধন্যবাদ!",
@@ -526,7 +526,7 @@
 	"What’s New in": "এতে নতুন কী",
 	"When history is turned off, new chats on this browser won't appear in your history on any of your devices.": "যদি হিস্টোরি বন্ধ থাকে তাহলে এই ব্রাউজারের নতুন চ্যাটগুলো আপনার কোন ডিভাইসের হিস্টোরিতেই দেখা যাবে না।",
 	"Whisper (Local)": "Whisper (লোকাল)",
-	"Widescreen Mode": "",
+	"Widescreen Mode": "ওয়াইডস্ক্রিন মোড",
 	"Workspace": "ওয়ার্কস্পেস",
 	"Write a prompt suggestion (e.g. Who are you?)": "একটি প্রম্পট সাজেশন লিখুন (যেমন Who are you?)",
 	"Write a summary in 50 words that summarizes [topic or keyword].": "৫০ শব্দের মধ্যে [topic or keyword] এর একটি সারসংক্ষেপ লিখুন।",
