fix:(translations): add pt-BR translations

--- a/src/lib/i18n/locales/pt-BR/translation.json
+++ b/src/lib/i18n/locales/pt-BR/translation.json
@@ -457,13 +457,13 @@
 	"Set Voice": "Definir Voz",
 	"Settings": "Configurações",
 	"Settings saved successfully!": "Configurações salvas com sucesso!",
-	"Settings updated successfully": "",
+	"Settings updated successfully": "Configurações atualizadas com sucesso",
 	"Share": "Compartilhar",
 	"Share Chat": "Compartilhar Bate-papo",
 	"Share to OpenWebUI Community": "Compartilhar com a Comunidade OpenWebUI",
 	"short-summary": "resumo-curto",
 	"Show": "Mostrar",
-	"Show Admin Details in Account Pending Overlay": "",
+	"Show Admin Details in Account Pending Overlay": "Mostrar detalhes do administrador na sobreposição de conta pendente",
 	"Show shortcuts": "Mostrar",
 	"Showcased creativity": "Criatividade Exibida",
 	"sidebar": "barra lateral",
